gccida/c2/local_alloc
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:817:4: error: expected ';' after expression
rtx v16; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:817:5: error: use of undeclared identifier 'v16'
rtx v16; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:826:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:826:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:827:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:827:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:833:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:833:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:835:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v34; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:837:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v36; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:838:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v37; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:839:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v38; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:840:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v39; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:841:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v40; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:842:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v41; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:843:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:843:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:844:4: error: expected ';' after expression
rtx v43; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/local-alloc.c:844:5: error: use of undeclared identifier 'v43'
rtx v43; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/local_alloc/src/obj/local-alloc.o] Error 1
